Added draft of calendar using semantic UI
